services/memos/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://memos.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: memos
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: memos
    gethomepage.dev/name: Memos
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-nginx/htpasswd
    nginx.ingress.kubernetes.io/auth-realm: durbin.casa
spec:
  ingressClassName: nginx
  rules:
    - host: memos.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
